# data-engineering-zoomcamp

01-docker-terraform/lab/: .gitignore  ingest-hw.ipynb  pyproject.toml  taxi-notebook.ipynb
01-docker-terraform/lab/data/: data.duckdb.wal
01-docker-terraform/lab/docker/: interactive-python.sh
01-docker-terraform/lab/docker/database/scripts/: run.sh
01-docker-terraform/lab/docker/pgAdmin/scripts/: run.sh
01-docker-terraform/lab/docker/postgres/scripts/: run.sh
01-docker-terraform/lab/docker/slim-pandas/: Dockerfile  pyproject.toml
01-docker-terraform/lab/docker/slim-pandas/app/: entrypoint.sh  pipeline.py
01-docker-terraform/lab/docker/slim-pandas/scripts/: build.sh  run.sh
01-docker-terraform/lab/scripts/: postgres-connect.sh  run-ingest.sh  run-pipeline.sh  setup_duckdb.py  test-queries.sh
01-docker-terraform/lab/sql/queries/: biggest_pickup_zone.sql  count_longest_trip_lt_100.sql  count_short_trips.sql  east_harlem_north_largest_tip_nov_2025.sql  test.sql
01-docker-terraform/lab/sql/views/: taxi_zone_lookup.sql
01-docker-terraform/lab/views/: green_tripdata_2025-11.sql
cohorts/2026/01-docker-terraform/: homework-answers.md
