[project]
name = "01-docker-terraform"
version = "0.1.0"
description = "Sample Lab for 01-docker-terraform"
requires-python = ">=3.13.11"
dependencies = [
    "pandas>=3.0.3",
    "psycopg[binary,pool]>=3.3.4",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pgcli>=4.5.0",
    "psycopg-binary>=3.3.4",
    "ruff>=0.15.18",
    "skimpy>=0.0.21",
    "tqdm>=4.68.3",
]
